# Bottelegram

./: .env  README.md  pyproject.toml  requirements.txt
backend/: db.sqlite3
backend/core/: settings.py  urls.py
backend/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
bot/: main.py
bot/handlers/: common.py  messages.py  registration.py  start.py
bot/services/: django_api.py
bot/states/: user_registration.py
